--- a/main.html
+++ b/main.html
@@ -93,11 +93,11 @@
         <p class="p1">Ім'я:<br></p>
         <input list="Names">
         <datalist id="Names">
-          <option value="Mykola">
-          <option value="Kolia">
-          <option value="Kolienka">
-          <option value="Kolian">
-          <option value="Koliuchka">
+          <option value="Kenshi">
+          <option value="Ken">
+          <option value="NotKenfromBarbie">
+          <option value="KenFromMK">
+          <option value="BlindButNotBlind">
         </datalist>
 
         <p class="p1">Електронна пошта:<br></p>
